--- a/LD30.csproj
+++ b/LD30.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Global\SpriteData.cs" />
     <Compile Include="Items\Coroutine.cs" />
     <Compile Include="Items\StateEntity.cs" />
+    <Compile Include="Mission\Beam.cs" />
     <Compile Include="Mission\CameraController.cs" />
     <Compile Include="Mission\Enemy.cs" />
     <Compile Include="Mission\Ground.cs" />
